<resources>
    <string name="app_name">BlogDev</string>
    <string name="novo">Novo</string>
    <string name="nome">Nome</string>
    <string name="nome_usuario">Nome de usuário</string>
    <string name="email">Email</string>
    <string name="confirma_senha">Confirme a senha</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrese">Cadastre-se</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="categoria_web">Web</string>
    <string name="categoria_mobile">Mobile</string>
    <string name="categoria_tecnologias">Tecnologias</string>
    <string name="categoria_curiosidades">Curiosidades</string>
    <string name="categoria_duvidas">Dúvidas</string>
    <string name="categoria_geral">Geral</string>
    <string name="texto_cadastro">Publicar!</string>
    <string name="campo_titulo">Título</string>
    <string name="campo_conteudo">Conteúdo</string>
    <string name="botao_salvar">Salvar</string>
    <string name="texto_item_recycler_view">Continuar lendo...</string>
    <string name="carregando_texto_item_recycler_view">Carregando...</string>

    <string-array name="categorias">
        <item>Web</item>
        <item>Mobile</item>
        <item>Tecnologias</item>
        <item>Curiosidades</item>
        <item>Dúvidas</item>
        <item>Geral</item>
    </string-array>

</resources>