<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".CriarContaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextNome"
            style="@style/EditTextCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/nome"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextNomeDeUsuario"
            style="@style/EditTextCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/nome_usuario"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextEmailUsuario"
            style="@style/EditTextCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextSenha1Usuario"
            style="@style/EditTextCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextSenha2Usuario"
            style="@style/EditTextCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/confirma_senha"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonCadastrarNovoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/azul_claro"
            android:paddingHorizontal="5dp"
            android:paddingVertical="15dp"
            android:text="@string/cadastrar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>