<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".CadastroPostagemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            app:titleTextColor="@color/verde_agua" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_cadastro"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTituloPostagem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimaryDark"
                android:hint="@string/campo_titulo"
                style="@style/EditTextCustomStyle"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextConteudoPostagem"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="top"
                android:hint="@string/campo_conteudo"
                style="@style/EditTextCustomStyle"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonSalvarNovaPostagem"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/verde_agua"
                android:drawableLeft="@drawable/save"
                android:gravity="center"
                android:paddingHorizontal="5dp"
                android:paddingVertical="15dp"
                android:text="@string/botao_salvar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
