<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            app:titleTextColor="@color/verde_agua" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/buttonNewPost"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/verde_agua"
                    android:drawableLeft="@drawable/add"
                    android:gravity="center"
                    android:paddingHorizontal="5dp"
                    android:paddingVertical="15dp"
                    android:text="@string/novo"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonCategoriaWeb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:paddingHorizontal="5dp"
                    android:paddingVertical="15dp"
                    android:text="@string/categoria_web"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonCategoriaMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:paddingHorizontal="5dp"
                    android:paddingVertical="15dp"
                    android:text="@string/categoria_mobile"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonCategoriaTecnologias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:paddingHorizontal="5dp"
                    android:paddingVertical="15dp"
                    android:text="@string/categoria_tecnologias"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonCategoriaCuriosidades"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:paddingHorizontal="5dp"
                    android:paddingVertical="15dp"
                    android:text="@string/categoria_curiosidades"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonCategoriaDuvidas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:paddingHorizontal="5dp"
                    android:paddingVertical="15dp"
                    android:text="@string/categoria_duvidas"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonCategoriaGeral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:paddingHorizontal="5dp"
                    android:paddingVertical="15dp"
                    android:text="@string/categoria_geral"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPosts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            tools:layout_editor_absoluteY="84dp" />

    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
